--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node app"
   },
   "dependencies": {
-  	"cookie-parser": "~1.3.5",
-  	"body-parser": "~1.13.2",
-    "express": "3.4.8",
-    "ejs": "*",
-    "mongodb": "^2.0.*",
-    "connect-mongo":"*",
-    "node-gyp" : "^3.4.0",
+    "async": "~1.5.0",
+    "body-parser": "~1.13.2",
+    "bson": "^1.0.4",
+    "connect-mongo": "*",
     "connect-multiparty": "~1.2.5",
-    "async" : "~1.5.0"
+    "cookie-parser": "~1.3.5",
+    "ejs": "*",
+    "express": "3.4.8",
+    "mongodb": "^2.0.*",
+    "node-gyp": "^3.4.0"
   }
 }
